[package]
name = "Warmup-Project-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
chrono = "0.4.34"
config = "0.13.4"
once_cell = "1.19.0"
serde = "1.0.196"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["trace", "fs", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

