[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum_typed_multipart = "0.11.0"
chrono = "0.4.34"
config = "0.14.0"
http-body-util = "0.1.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tower-sessions = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ui-components = { version = "0.1.0", path = "../ui-components" }
